# Discord-Pvp-Bot

./: .env.template  Cargo.toml
.github/workflows/: makeRelease.yaml
mock_server/: killsummary.json  package-lock.json  package.json  server.deno.ts  server.ts
src/: data.rs  main.rs
src/commands/: mod.rs  pvpregister.rs  pvpself.rs  pvpweekly.rs  pvpwhois.rs
src/commands/admin/: mod.rs  pvpadminforceweeklysummary.rs  util.rs
src/other/: mod.rs  weekly_summary.rs  weekly_summary_event.rs
src/util/: mod.rs  new_username.rs
