[package]
name = "discord_pvp_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
chrono = "0.4.23"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1.2"
serde = { version = "1.0", features = ["derive"] }